Changes  body size from vh to dvh to handle the body size issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
   line-height: 1;
   padding: 0rem;
   margin: 0;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
